# POS-GameOfLife

./: README.md
POS-GameOfLife-main/: README.md
POS-GameOfLife-main/POS-semestralka-GoL/: CMakeLists.txt  file_manager.c  main.c  svet.c  terminal_manager.h
POS-GoL-server/: CMakeLists.txt  buffer.h  file_handler.h  main.c  pole.h  pole_stringov.c  pole_stringov.h
POS-GoL-server/pos_sockets/: active_socket.c  active_socket.h  passive_socket.h
POS-semestralka-GoL/: CMakeLists.txt  file_manager.c  file_manager.h  main.c  my_client_socket.c  my_client_socket.h  pole_stringov.c  pole_stringov.h  svet.c  svet.h  terminal_manager.c
